--- a/invenio_kwalitee/templates/page.html
+++ b/invenio_kwalitee/templates/page.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -16,6 +15,7 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <!-- Custom styles for this template -->
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/jumbotron-narrow.css') }}" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -37,29 +37,9 @@
         </ul>
         <h3 class="text-muted">Invenio Kwalitee</h3>
       </div>
+      {% block body %}
 
-      <div class="row">
-        <div class="col-lg-12">
-          <h4>Commits</h4>
-          <table class="table">
-            <thead>
-              <tr>
-                <th>#GitHub</th>
-                <th>@Status</th>
-              </tr>
-            </thead>
-            <tbody>
-            {% for file in files %}
-              <tr>
-                <td><a href="{{ config.REPO_URL + file }}">{{ file[:7] }}</td>
-                <td><a href="{{ url_for('status', commit_sha=file) }}">status</a></td>
-              </tr>
-            {% endfor %}
-            </tbody>
-          </table>
-        </div>
-      </div>
-
+      {% endblock body %}
       <div class="footer">
         <p>&copy; CERN 2014</p>
       </div>
