--- a/invenio_kwalitee/templates/account.html
+++ b/invenio_kwalitee/templates/account.html
@@ -26,13 +26,16 @@
 {% block body %}
 <div class="row">
   <div class="col-lg-12">
-    <h2>Accounts</h2>
+    <h2>Repositories of {{ account.name }}</h2>
     <ul>
-  {%- for account in accounts -%}
-      <li><a href="{{ url_for("account", account=account.name) }}">
-        {{- account.name -}}
-      </a></li>
-  {%- endfor -%}
+  {%- for repository in repositories %}
+      <li>
+        <a href="{{ url_for("repository", account=account.name,
+                                          repository=repository.name) }}">
+          {{- repository.name -}}
+        </a>
+      </li>
+  {%- endfor %}
     </ul>
   </div>
 </div>
