--- a/invenio_kwalitee/templates/branch.html
+++ b/invenio_kwalitee/templates/branch.html
@@ -22,18 +22,43 @@
 #}
 
 {%- extends 'page.html' -%}
+{%- import "helpers.html" as helpers -%}
 
 {% block body %}
+{%- set content = branch.content -%}
 <div class="row">
   <div class="col-lg-12">
-    <h2>Accounts</h2>
+    <h2>
+      {{ helpers.repository(account, repository) -}}
+      /
+      {{- branch.name -}}
+      /
+      {{- commit.sha | truncate(7, True, end="") }}
+      (<a href="{{ branch.url }}">github</a>)
+    </h2>
+    <h3>Commits</h3>
     <ul>
-  {%- for account in accounts -%}
-      <li><a href="{{ url_for("account", account=account.name) }}">
-        {{- account.name -}}
-      </a></li>
-  {%- endfor -%}
+  {%- for sha in content["commits"] %}
+      <li>
+        <a href="{{ url_for("commit",
+                            account=account.name,
+                            repository=repository.name,
+                            sha=sha)}}">
+          {{- sha | truncate(7, True, end="") -}}
+        </a>
+      </li>
+  {%- endfor %}
     </ul>
+    <h3>Files</h3>
+  {%- if content["files"] %}
+    <pre>
+      {%- for line in content["files"] -%}
+        {{- line }}
+{% endfor -%}
+    </pre>
+    {%- else %}
+    <p>Everything is okay.</p>
+  {%- endif %}
   </div>
 </div>
 {% endblock body %}
