--- a/invenio_kwalitee/templates/commit.html
+++ b/invenio_kwalitee/templates/commit.html
@@ -1,4 +1,4 @@
-# -*- coding: utf-8 -*-
+{#
 ##
 ## This file is part of Invenio-Kwalitee
 ## Copyright (C) 2014 CERN.
@@ -20,5 +20,31 @@
 ## In applying this licence, CERN does not waive the privileges and immunities
 ## granted to it by virtue of its status as an Intergovernmental Organization
 ## or submit itself to any jurisdiction.
+#}
 
-from invenio_kwalitee import app as application
+{%- extends 'page.html' -%}
+{%- import "helpers.html" as helpers -%}
+
+{% block body %}
+{%- set content = commit.content -%}
+<div class="row">
+  <div class="col-lg-12">
+    <h2>
+      {{ helpers.repository(account, repository) -}}
+      /
+      {{- commit.sha | truncate(7, True, end="") }}
+      (<a href="{{ commit.url }}">github</a>)
+    </h2>
+    <pre>
+      {%- for line in content["message"] -%}
+        {{- line }}
+{% endfor -%}
+    </pre>
+    <pre>
+      {%- for line in content["files"] -%}
+        {{- line }}
+{% endfor -%}
+    </pre>
+  </div>
+</div>
+{% endblock body %}
