--- a/invenio_kwalitee/templates/helpers.html
+++ b/invenio_kwalitee/templates/helpers.html
@@ -21,19 +21,21 @@
 ## or submit itself to any jurisdiction.
 #}
 
-{%- extends 'page.html' -%}
-
-{% block body %}
-<div class="row">
-  <div class="col-lg-12">
-    <h2>Accounts</h2>
-    <ul>
-  {%- for account in accounts -%}
-      <li><a href="{{ url_for("account", account=account.name) }}">
-        {{- account.name -}}
-      </a></li>
-  {%- endfor -%}
-    </ul>
-  </div>
-</div>
-{% endblock body %}
+{%- macro repository(account, repository, sep="/") -%}
+{# Build the repository title bar: account/repository.
+ #
+ # The account can be left empty but it's not recommended.
+ #}
+{%- if not account or account.id != repository.owner_id -%}
+  {%- set account = repository.owner -%}
+{%- endif -%}
+<a href="{{ url_for("account", account=account.name) }}">
+  {{- account.name -}}
+</a>
+{{- sep -}}
+<a href="{{ url_for("repository",
+                         account=account.name,
+                         repository=repository.name ) }}">
+  {{- repository.name -}}
+</a>
+{%- endmacro -%}
