--- a/invenio_kwalitee/templates/repository.html
+++ b/invenio_kwalitee/templates/repository.html
@@ -26,13 +26,44 @@
 {% block body %}
 <div class="row">
   <div class="col-lg-12">
-    <h2>Accounts</h2>
-    <ul>
-  {%- for account in accounts -%}
-      <li><a href="{{ url_for("account", account=account.name) }}">
+    <h2>
+      <a href="{{ url_for("account", account=account.name) }}">
         {{- account.name -}}
-      </a></li>
-  {%- endfor -%}
+      </a>/<a href="{{ url_for("repository",
+                               account=account.name,
+                               repository=repository.name ) }}">
+        {{- repository.name -}}
+      </a>
+    </h2>
+    <ul>
+{%- for commit in commits -%}
+      <li>
+        <a href="{{ commit.url }}">{{ commit.sha | truncate(7, True, end="") }}</a>:
+  {%- if commit.errors > 0 %}
+        <a href="{{ url_for("commit",
+                            account=account.name,
+                            repository=repository.name,
+                            sha=commit.sha) }}">
+          {{- "{0.errors} errors".format(commit) -}}
+        </a>
+  {%- else %}
+          Everything is OK
+  {%- endif %}
+        <ul>
+  {%- for branch in commit.branch_statuses %}
+          <li>
+    {%- if branch.errors > 0 -%}
+            <a href="{{ branch.url }}">
+              {{- "{0.name} has {0.errors} errors".format(branch) -}}
+            </a>
+    {%- else -%}
+            {{- branch.name -}} is OK
+    {%- endif -%}
+          </li>
+  {%- endfor %}
+        </ul>
+      </li>
+{%- endfor -%}
     </ul>
   </div>
 </div>
