global: features and fixes
* Adding auto creation of unknown accounts.
  via AUTO_CREATE=True

* Adding creation and update time on models

* Altering model, files is now a dict.

* Supporting pending statuses.

* Supporting per user token.

* Adding alembic to support upcoming migrations.

* Fixing PEP257 output format to look like PEP8 and pyFlakes'.

* Sorting the errors by line number.

* NOTE configure the database location in alembic.ini.

Signed-off-by: Yoan Blanc <yoan.blanc@cern.ch>

--- a/invenio_kwalitee/templates/branch.html
+++ b/invenio_kwalitee/templates/branch.html
@@ -24,15 +24,18 @@
 {%- extends 'page.html' -%}
 {%- import "helpers.html" as helpers -%}
 
-{% block body %}
+{%- block body -%}
 {%- set content = branch.content -%}
 <div class="row">
   <div class="col-lg-12">
     <h2>
       {{ helpers.repository(account, repository) -}}
-      /
-      {{- branch.name -}}
-      /
+      /<a href="{{ url_for("branch",
+                           account=account.name,
+                           repository=repository.name,
+                           branch=branch.name) }}">
+        {{- branch.name -}}
+      </a>/
       {{- commit.sha | truncate(7, True, end="") }}
       (<a href="{{ branch.url }}">github</a>)
     </h2>
@@ -49,16 +52,13 @@
       </li>
   {%- endfor %}
     </ul>
-    <h3>Files</h3>
-  {%- if content["files"] %}
-    <pre>
-      {%- for line in content["files"] -%}
-        {{- line }}
-{% endfor -%}
-    </pre>
-    {%- else %}
-    <p>Everything is okay.</p>
+  {%- if branch.is_pending() %}
+    <p>
+      Pending
+    </p>
+  {%- else %}
+    {{- helpers.files(content.get("files")) }}
   {%- endif %}
   </div>
 </div>
-{% endblock body %}
+{%- endblock body -%}
