--- a/invenio_kwalitee/templates/index.html
+++ b/invenio_kwalitee/templates/index.html
@@ -23,17 +23,17 @@
 
 {%- extends 'page.html' -%}
 
-{% block body %}
+{%- block body -%}
 <div class="row">
   <div class="col-lg-12">
     <h2>Accounts</h2>
     <ul>
-  {%- for account in accounts -%}
+  {%- for account in accounts %}
       <li><a href="{{ url_for("account", account=account.name) }}">
         {{- account.name -}}
       </a></li>
-  {%- endfor -%}
+  {%- endfor %}
     </ul>
   </div>
 </div>
-{% endblock body %}
+{%- endblock body -%}
