--- a/invenio_kwalitee/templates/status.html
+++ b/invenio_kwalitee/templates/status.html
@@ -23,10 +23,10 @@
 
 {%- extends 'page.html' -%}
 
-{% block body %}
+{%- block body -%}
   <div class="row">
     <div class="col-lg-12">
       <pre>{{ status }}</pre>
     </div>
   </div>
-{% endblock body %}
+{%- endblock body -%}
