--- a/kwalitee/templates/branches.html
+++ b/kwalitee/templates/branches.html
@@ -1,19 +1,19 @@
 {#
-## This file is part of Invenio-Kwalitee
+## This file is part of kwalitee
 ## Copyright (C) 2014 CERN.
 ##
-## Invenio-Kwalitee is free software; you can redistribute it and/or
+## kwalitee is free software; you can redistribute it and/or
 ## modify it under the terms of the GNU General Public License as
 ## published by the Free Software Foundation; either version 2 of the
 ## License, or (at your option) any later version.
 ##
-## Invenio-Kwalitee is distributed in the hope that it will be useful, but
+## kwalitee is distributed in the hope that it will be useful, but
 ## WITHOUT ANY WARRANTY; without even the implied warranty of
 ## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 ## General Public License for more details.
 ##
 ## You should have received a copy of the GNU General Public License
-## along with Invenio-Kwalitee; if not, write to the Free Software Foundation,
+## along with kwalitee; if not, write to the Free Software Foundation,
 ## Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.
 ##
 ## In applying this licence, CERN does not waive the privileges and immunities
@@ -25,33 +25,35 @@
 {%- import "helpers.html" as helpers -%}
 
 {%- block body -%}
-{%- set content = commit.content -%}
 <div class="row">
   <div class="col-lg-12">
     <h2>
       {{ helpers.repository(account, repository) -}}
-      /<a href="{{ url_for("commit",
+      /<a href="{{ url_for("branch",
                            account=account.name,
                            repository=repository.name,
-                           sha=commit.sha) }}">
-        {{- commit.sha | truncate(7, True, end="") -}}
+                           branch=branches[0].name) }}">
+        {{- branches[0].name -}}
       </a>
-      (<a href="{{ commit.url }}">github</a>)
     </h2>
-  {%- if commit.is_pending() %}
-    <p>
-      Pending
-    <p>
-  {%- else %}
-    {%- if content["message"] %}
-    <pre>
-        {%- for line in content["message"] -%}
-        {{- line }}
-{% endfor -%}
-    </pre>
+    <ul>
+  {%- for branch in branches %}
+      <li>
+        <a href="{{ url_for("branch_status",
+                            account=account.name,
+                            repository=repository.name,
+                            branch=branch.name,
+                            sha=branch.commit.sha) }}">
+          {{ branch.commit.sha | truncate(7, True, end="")}}
+        </a>
+    {%- if branch.errors %}
+        {{ "{0} errors.".format(branch.errors) }}
+    {%- else %}
+        Everything is OK.
     {%- endif %}
-    {{ helpers.files(content.get("files")) }}
+        (<a href="{{ branch.url }}">github</a>)
+      </li>
+  {%- endfor %}
   </div>
-  {%- endif %}
 </div>
 {%- endblock body -%}
