--- a/kwalitee/templates/page.html
+++ b/kwalitee/templates/page.html
@@ -1,19 +1,19 @@
 {#
-## This file is part of Invenio-Kwalitee
+## This file is part of kwalitee
 ## Copyright (C) 2014 CERN.
 ##
-## Invenio-Kwalitee is free software; you can redistribute it and/or
+## kwalitee is free software; you can redistribute it and/or
 ## modify it under the terms of the GNU General Public License as
 ## published by the Free Software Foundation; either version 2 of the
 ## License, or (at your option) any later version.
 ##
-## Invenio-Kwalitee is distributed in the hope that it will be useful, but
+## kwalitee is distributed in the hope that it will be useful, but
 ## WITHOUT ANY WARRANTY; without even the implied warranty of
 ## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 ## General Public License for more details.
 ##
 ## You should have received a copy of the GNU General Public License
-## along with Invenio-Kwalitee; if not, write to the Free Software Foundation,
+## along with kwalitee; if not, write to the Free Software Foundation,
 ## Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.
 ##
 ## In applying this licence, CERN does not waive the privileges and immunities
@@ -32,7 +32,7 @@
 
     <title>
 {%- block title -%}
-        Invenio Kwalitee
+        kwalitee
 {%- endblock -%}
     </title>
 
@@ -55,11 +55,11 @@
             {#<li><a href="http://github.com/inveniosoftware/invenio">GitHub</a></li>#}
           </ul>
         </nav>
-        <h1 class="text-muted">Invenio Kwalitee</h1>
+        <h1 class="text-muted">kwalitee</h1>
       </header>
 {% block body %}{% endblock body %}
       <footer class="footer">
-        <p><a href="http://github.com/jirikuncar/invenio-kwalitee">GitHub</a> &copy; CERN 2014</p>
+        <p><a href="http://github.com/jirikuncar/kwalitee">GitHub</a> &copy; CERN 2014</p>
       </footer>
     </div>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
