--- a/kwalitee/templates/status.html
+++ b/kwalitee/templates/status.html
@@ -1,33 +1,32 @@
-# -*- coding: utf-8 -*-
-##
-## This file is part of Invenio-Kwalitee
+{#
+## This file is part of kwalitee
 ## Copyright (C) 2014 CERN.
 ##
-## Invenio-Kwalitee is free software; you can redistribute it and/or
+## kwalitee is free software; you can redistribute it and/or
 ## modify it under the terms of the GNU General Public License as
 ## published by the Free Software Foundation; either version 2 of the
 ## License, or (at your option) any later version.
 ##
-## Invenio-Kwalitee is distributed in the hope that it will be useful, but
+## kwalitee is distributed in the hope that it will be useful, but
 ## WITHOUT ANY WARRANTY; without even the implied warranty of
 ## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 ## General Public License for more details.
 ##
 ## You should have received a copy of the GNU General Public License
-## along with Invenio-Kwalitee; if not, write to the Free Software Foundation,
+## along with kwalitee; if not, write to the Free Software Foundation,
 ## Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.
 ##
 ## In applying this licence, CERN does not waive the privileges and immunities
 ## granted to it by virtue of its status as an Intergovernmental Organization
 ## or submit itself to any jurisdiction.
+#}
 
-"""Invenio Kwalitee Flask application and git hooks."""
+{%- extends 'page.html' -%}
 
-from __future__ import unicode_literals
-
-from .factory import create_app
-from .version import __version__
-
-
-__docformat__ = "restructuredtext en"
-__all__ = ("__version__", "create_app")
+{%- block body -%}
+  <div class="row">
+    <div class="col-lg-12">
+      <pre>{{ status }}</pre>
+    </div>
+  </div>
+{%- endblock body -%}
