global: canonical repo on inveniosoftware

--- a/kwalitee/templates/page.html
+++ b/kwalitee/templates/page.html
@@ -59,7 +59,7 @@
       </header>
 {% block body %}{% endblock body %}
       <footer class="footer">
-        <p><a href="http://github.com/jirikuncar/kwalitee">GitHub</a> &copy; CERN 2014</p>
+        <p><a href="http://github.com/inveniosoftware/kwalitee">&copy; CERN 2014, 2015</a></p>
       </footer>
     </div>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
